# narrative-operator-MinerU-Popo

./: .gitignore  README.md  README_zh.md  pyproject.toml
api/: README.md  README_zh.md  __init__.py  config.py  main.py  models.py  requirements.txt
api/services/: infer.py  normalize.py  queue.py  tree_builder.py  worker.py
output_cases/sub_com_trees/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
output_cases/trees/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
output_cases/view_txt/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
post_processing/: get_json_tree.py  inference.py  label_normalization.py  model_utils.py  table_merge_utils.py
scripts/: start_popo_local.sh
