[project]
name = "narrative-operator-mineru-popo"
version = "0.1.0"
description = "Narrative Operator MinerU Popo"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.12.0",
    "anthropic==0.71.0",
    "beautifulsoup4==4.13.5",
    "boto3==1.42.78",
    "fastapi>=0.100.0",
    "fitz",
    "gradio_pdf==0.0.22",
    "huggingface_hub==1.5.0",
    "jinja2==3.1.6",
    "matplotlib==3.10.8",
    "mcp==1.24.0",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "openai-harmony==0.0.8",
    "opencv-python==4.13.0.92",
    "pdftext==0.6.3",
    "pillow==12.1.1",
    "pydantic==2.13.3",
    "PyMuPDF==1.27.1",
    "pyspark==4.1.0",
    "pytest==9.0.2",
    "python-dateutil==2.9.0.post1",
    "PyYAML==6.0.3",
    "requests==2.33.1",
    "rich==14.3.3",
    "safetensors==0.7.0",
    "sentencepiece==0.2.0",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "tqdm==4.67.3",
    "transformers==5.3.0",
    "ultralytics==8.3.239",
    "zss==1.2.0",
]

[project.optional-dependencies]
dev = [
    "debugpy>=1.8.0",
]

[tool.uv]
dev-dependencies = [
    "debugpy>=1.8.0",
]